--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css"/>
 </head>
 <body>
-    <div class="row">
-            <div class="container">
+   <div class="container">
+       <div class="row">
+
+            <div class="wrapper">
                 <div class="item1">
-                    <h3>Checkout</h3>
+                    <p><b>Checkouts</b></p>
                 </div>
+
                 <div class="item2">
-                    <p>Shipping / <b>Payment Method </b> / Confirmation</p>
+                        <p>Shipping <b>Payment Method</b>/ Confirmation</p>
                 </div>
+
                 <div class="item3">
                     <span><i class="fa fa-times"></i></span>
                 </div>
-                <hr>
-            </div> 
+            </div>
 
-            <div class="container1">
-                <div class="item1">
-                    <h3>Payment Block</h3>
+            <div class="wrapper">
+                <div class="item4">
+                    <p>Payment Block</p>
                 </div>
-                <div class="item2">
-                    <h4>Cart Block</h4>
+
+                <div class="item5">
+                        <p>Cart Block</p>
                 </div>
-            </div> 
-    </div>
+
+            </div>
+       </div>
+   </div>
 </body>
 </html>
